# juniors_interview

./: pyproject.toml  requirements.txt
task1/: solution.py  solution_v2.py  tests.py
task2/: beasts.csv  solution.py  tests.py
task3/: solution.py  tests.py
