[tool.poetry]
name = "juniors-interview"
version = "0.1.0"
description = ""
authors = ["Ivan122727 <ermolovivan2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
aiohttp = "^3.11.6"
aiounittest = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
